--- a/keda/templates/manager/service.yaml
+++ b/keda/templates/manager/service.yaml
@@ -27,7 +27,7 @@ metadata:
 spec:
   ports:
   - name: metricsservice
-    port: 9666
+    port: {{ .Values.operator.port }}
     targetPort: 9666
   {{- if .Values.prometheus.operator.enabled }}
   - name: metrics
